minor key alignment fix

--- a/basicWordle/style.css
+++ b/basicWordle/style.css
@@ -49,7 +49,7 @@ body {
 }
 
 .key-container button:nth-child(11) {
-    margin-left: 30px;
+    margin-left: 28px;
 }
 
 .key-container button:nth-child(20),
